crates/escalier_parser/src/snapshots/escalier_parser__tests__type_annotations-4.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let p: Point = {x: 5, y: 10};\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 29,
                    },
                },
                span: 0..29,
                pattern: Pattern {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 4,
                        },
                        end: Position {
                            line: 0,
                            column: 5,
                        },
                    },
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            name: "p",
                            mutable: false,
                            span: 4..5,
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 5,
                                },
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: Some(
                    TypeAnn {
                        kind: TypeRef(
                            TypeRef {
                                name: "Point",
                                type_args: None,
                            },
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 7,
                            },
                            end: Position {
                                line: 0,
                                column: 12,
                            },
                        },
                        span: 7..12,
                        inferred_type: None,
                    },
                ),
                init: Some(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 15,
                            },
                            end: Position {
                                line: 0,
                                column: 28,
                            },
                        },
                        span: 15..28,
                        kind: Obj(
                            Obj {
                                props: [
                                    Prop(
                                        KeyValue(
                                            KeyValueProp {
                                                key: Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 16,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 17,
                                                        },
                                                    },
                                                    span: 16..17,
                                                    name: "x",
                                                },
                                                value: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 19,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 20,
                                                        },
                                                    },
                                                    span: 19..20,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 19,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 20,
                                                                    },
                                                                },
                                                                span: 19..20,
                                                                value: "5",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    ),
                                    Prop(
                                        KeyValue(
                                            KeyValueProp {
                                                key: Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 22,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 23,
                                                        },
                                                    },
                                                    span: 22..23,
                                                    name: "y",
                                                },
                                                value: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 25,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 27,
                                                        },
                                                    },
                                                    span: 25..27,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 25,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 27,
                                                                    },
                                                                },
                                                                span: 25..27,
                                                                value: "10",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
