crates/escalier_parser/src/snapshots/escalier_parser__tests__type_annotations.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let x: number = 5;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 18,
                    },
                },
                span: 0..18,
                pattern: Pattern {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 4,
                        },
                        end: Position {
                            line: 0,
                            column: 5,
                        },
                    },
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            name: "x",
                            mutable: false,
                            span: 4..5,
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 5,
                                },
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: Some(
                    TypeAnn {
                        kind: Keyword(
                            KeywordType {
                                keyword: Number,
                            },
                        ),
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 7,
                            },
                            end: Position {
                                line: 0,
                                column: 13,
                            },
                        },
                        span: 7..13,
                        inferred_type: None,
                    },
                ),
                init: Some(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 16,
                            },
                            end: Position {
                                line: 0,
                                column: 17,
                            },
                        },
                        span: 16..17,
                        kind: Lit(
                            Num(
                                Num {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 16,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 17,
                                        },
                                    },
                                    span: 16..17,
                                    value: "5",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
